# undocx

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  context7.json  llms-full.txt  llms.txt  pyproject.toml
.github/: AGENTS.md
.github/workflows/: AGENTS.md  auto-tag.yml  release-notes.yml  release.yml
docs/: AGENTS.md  API_POLICY.md  guide.md  undocx_showcase.md
examples/: AGENTS.md  benchmark_comparison.py  perf_benchmark.rs
examples/python_example/: AGENTS.md  demo.py  pyproject.toml
examples/rust_example/: AGENTS.md  Cargo.toml
examples/rust_example/src/: main.rs
scripts/: AGENTS.md
src/: AGENTS.md  error.rs  lib.rs  localization.rs  main.rs
src/adapters/: AGENTS.md
src/adapters/docx/: AGENTS.md  extractor.rs  mod.rs
src/converter/: AGENTS.md  context.rs  image.rs  mod.rs  numbering.rs  paragraph.rs  run.rs  styles.rs  table.rs
src/core/: AGENTS.md  ast.rs
src/render/: AGENTS.md  escape.rs  markdown.rs  mod.rs
tests/: AGENTS.md  generated_regression_test.rs  golden_snapshot_test.rs  integration_test.rs  invariant_randomized_test.rs
tests/golden/: AGENTS.md
