[package]
name = "undocx"
version = "0.5.0"
edition = "2021"
rust-version = "1.83"
description = "DOCX to Markdown converter written in Rust"
license = "MIT"
repository = "https://github.com/KimSeogyu/undocx"
homepage = "https://github.com/KimSeogyu/undocx"
documentation = "https://docs.rs/undocx"
readme = "README.md"
keywords = ["docx", "markdown", "converter", "document", "office"]
categories = [
    "command-line-utilities",
    "text-processing",
    "parser-implementations",
]
include = [
    "src/**/*",
    "tests/*.rs",
    "tests/aaa/**/*",
    "tests/pandoc/**/*",
    "tests/golden/**/*",
    "examples/python_example/*.py",
    "examples/python_example/*.toml",
    "examples/python_example/*.lock",
    "README.md",
    "pyproject.toml",
]
default-run = "undocx"


[features]
default = []
python = ["pyo3"]

[dependencies]
rs-docx = "0.2.0"
base64 = "0.22"
thiserror = "2.0"
zip = "2.2"
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.23", features = [
    "extension-module",
    "abi3-py312",
], optional = true }

[lib]
name = "undocx"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
hard-xml = "1.27.0"
pretty_assertions = "1.4"
