[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "undocx"
version = "0.3.14"
description = "DOCX to Markdown converter written in Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing :: Markup",
    "Topic :: File Formats",
]
keywords = ["docx", "markdown", "converter", "document"]

[project.urls]
Homepage = "https://github.com/KimSeogyu/undocx"
Repository = "https://github.com/KimSeogyu/undocx"
Issues = "https://github.com/KimSeogyu/undocx/issues"

[tool.maturin]
features = ["python"]
module-name = "undocx"
